Managed/Runtime/Internal/Generated/RuntimeNativeGenerated.g.cs

// Auto-generated by csharp-binding-generator. Do not edit by hand.
using System;
using System.Runtime.InteropServices;

namespace Luna.Runtime.Internal;

[StructLayout(LayoutKind.Sequential)]
internal partial struct NativeFileHandle
{
    public IntPtr Object;
    public IntPtr Ifile;
    public IntPtr IseekableStream;
    public IntPtr Istream;
}

[StructLayout(LayoutKind.Sequential)]
internal partial struct NativeFileIteratorHandle
{
    public IntPtr Object;
    public IntPtr IfileIterator;
}

internal static partial class RuntimeNativeGenerated
{
    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_init", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int Init();

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_is_initialized", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int IsInitialized();

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_close", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Close();

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_error_get_code_by_name", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr ErrorGetCodeByName([MarshalAs(UnmanagedType.LPUTF8Str)] string categoryName, [MarshalAs(UnmanagedType.LPUTF8Str)] string codeName);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_error_get_category_by_name", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr ErrorGetCategoryByName([MarshalAs(UnmanagedType.LPUTF8Str)] string categoryName);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_error_get_code_name", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr ErrorGetCodeName(UIntPtr code);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_error_get_category_name", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr ErrorGetCategoryName(UIntPtr category);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_error_get_code_category", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr ErrorGetCodeCategory(UIntPtr code);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_error_explain", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr ErrorExplain(UIntPtr code);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_error_unwrap", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr ErrorUnwrap(UIntPtr code);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_error_get_current_code", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr ErrorGetCurrentCode();

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_error_get_current_message", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr ErrorGetCurrentMessage();

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_object_retain", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ObjectRetain(IntPtr @object);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_object_release", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ObjectRelease(IntPtr @object);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_object_ref_count", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ObjectRefCount(IntPtr @object);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_object_retain_weak", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ObjectRetainWeak(IntPtr @object);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_object_release_weak", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ObjectReleaseWeak(IntPtr @object);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_object_weak_ref_count", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ObjectWeakRefCount(IntPtr @object);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_object_expired", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ObjectExpired(IntPtr @object);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_object_retain_if_not_expired", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ObjectRetainIfNotExpired(IntPtr @object);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_object_query_interface", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr ObjectQueryInterface(IntPtr @object, in global::Luna.Runtime.Guid iid);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_type_get_by_guid", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr TypeGetByGuid(in global::Luna.Runtime.Guid guid);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_type_get_object_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr TypeGetObjectType(IntPtr @object);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_type_get_base", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr TypeGetBase(IntPtr type);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_type_get_guid", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void TypeGetGuid(IntPtr type, out global::Luna.Runtime.Guid outGuid);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_type_get_name", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr TypeGetName(IntPtr type);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_type_get_alias", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr TypeGetAlias(IntPtr type);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_type_get_size", CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong TypeGetSize(IntPtr type);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_type_get_alignment", CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong TypeGetAlignment(IntPtr type);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_type_is_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int TypeIsType(IntPtr type, IntPtr targetType);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_object_is_type", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ObjectIsType(IntPtr @object, IntPtr targetType);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_time_get_ticks", CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong TimeGetTicks();

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_time_get_ticks_per_second", CallingConvention = CallingConvention.Cdecl)]
    internal static extern double TimeGetTicksPerSecond();

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_time_get_utc_timestamp", CallingConvention = CallingConvention.Cdecl)]
    internal static extern long TimeGetUtcTimestamp();

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_time_get_local_timestamp", CallingConvention = CallingConvention.Cdecl)]
    internal static extern long TimeGetLocalTimestamp();

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_time_local_to_utc", CallingConvention = CallingConvention.Cdecl)]
    internal static extern long TimeLocalToUtc(long localTimestamp);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_time_utc_to_local", CallingConvention = CallingConvention.Cdecl)]
    internal static extern long TimeUtcToLocal(long utcTimestamp);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_time_timestamp_to_datetime", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void TimeTimestampToDatetime(long timestamp, out global::Luna.Runtime.DateTime outDatetime);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_time_datetime_to_timestamp", CallingConvention = CallingConvention.Cdecl)]
    internal static extern long TimeDatetimeToTimestamp(in global::Luna.Runtime.DateTime datetime);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_log", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Log(uint verbosity, [MarshalAs(UnmanagedType.LPUTF8Str)] string tag, [MarshalAs(UnmanagedType.LPUTF8Str)] string message);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_log_set_platform_enabled", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void LogSetPlatformEnabled(int enabled);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_log_set_platform_verbosity", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void LogSetPlatformVerbosity(uint verbosity);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_log_set_file_enabled", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void LogSetFileEnabled(int enabled);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_log_set_file", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void LogSetFile([MarshalAs(UnmanagedType.LPUTF8Str)] string file);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_log_set_file_verbosity", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void LogSetFileVerbosity(uint verbosity);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_log_flush_file", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void LogFlushFile();

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_get_current_dir", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetCurrentDir();

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_release_current_dir", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void ReleaseCurrentDir(IntPtr path);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_set_current_dir", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr SetCurrentDir([MarshalAs(UnmanagedType.LPUTF8Str)] string path);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_get_process_path", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr GetProcessPath();

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_release_process_path", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void ReleaseProcessPath(IntPtr path);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_free_buffer", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void FreeBuffer(IntPtr buffer);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_file_open", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr FileOpen([MarshalAs(UnmanagedType.LPUTF8Str)] string path, uint flags, uint creation, out NativeFileHandle outFile);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_file_load_data", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr FileLoadData(IntPtr self, out IntPtr outData, out ulong outSize);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_file_get_attribute", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr FileGetAttribute([MarshalAs(UnmanagedType.LPUTF8Str)] string path, out global::Luna.Runtime.FileAttribute outAttribute);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_file_copy", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr FileCopy([MarshalAs(UnmanagedType.LPUTF8Str)] string fromPath, [MarshalAs(UnmanagedType.LPUTF8Str)] string toPath);
